# CMakeList.txt : CMake project for Sorting, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Sorting")

# Add source to this project's executable.
add_executable (Sorting "Sorting.cpp" "Sorting.h")

# TODO: Add tests and install targets if needed.
